<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button
		android:id="@+id/touch_pad"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginLeft="0dp"
		android:layout_marginBottom="0dp"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:alpha="0.0"/>

	<ImageView
		android:layout_height="16dp"
		android:layout_width="16dp"
		android:src="@drawable/cursor"
		android:id="@+id/mouse_cursor"/>

	<Button
		android:textSize="32sp"
		android:id="@+id/control_down"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginLeft="54dp"
		android:layout_marginBottom="14dp"
		android:textColor="#FFFFFFFF"
		android:text="@string/control_down"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"/>

	<Button
		android:textSize="32sp"
		android:id="@+id/control_up"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginLeft="54dp"
		android:layout_marginBottom="120dp"
		android:text="@string/control_up"
		android:textColor="#FFFFFFFF"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"/>

	<Button
		android:textSize="32sp"
		android:id="@+id/control_left"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginLeft="0dp"
		android:layout_marginBottom="68dp"
		android:textColor="#FFFFFFFF"
		android:text="@string/control_left"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"/>

	<Button
		android:textSize="32sp"
		android:id="@+id/control_right"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginLeft="108dp"
		android:layout_marginBottom="68dp"
		android:textColor="#FFFFFFFF"
		android:text="@string/control_right"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"/>

	<Button
		android:textSize="20sp"
		android:layout_marginRight="75dp"
		android:layout_marginBottom="75dp"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true"
		android:id="@+id/control_jump"
		android:background="@drawable/control_button"
		android:textColor="#FFFFFFFF"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:text="@string/control_jump"/>

	<LinearLayout
		android:layout_width="270dp"
		android:layout_height="30dp"
		android:layout_marginBottom="0dp"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal"
		android:layout_centerInParent="true"
		android:layout_centerHorizontal="true"
		android:alpha="0.2"
		android:id="@+id/item_bar"
		android:visibility="visible"
		android:weightSum="9.0">

		<Button
			android:textSize="20sp"
			android:id="@+id/control_1"
			android:background="@drawable/control_button"
			android:layout_width="match_parent"
			android:textColor="#FFFFFFFF"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_2"
			android:background="@drawable/control_button"
			android:textColor="#FFFFFFFF"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_3"
			android:background="@drawable/control_button"
			android:layout_width="match_parent"
			android:textColor="#FFFFFFFF"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_4"
			android:background="@drawable/control_button"
			android:layout_width="match_parent"
			android:textColor="#FFFFFFFF"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_5"
			android:background="@drawable/control_button"
			android:textColor="#FFFFFFFF"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_6"
			android:background="@drawable/control_button"
			android:textColor="#FFFFFFFF"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_7"
			android:background="@drawable/control_button"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:textColor="#FFFFFFFF"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_8"
			android:background="@drawable/control_button"
			android:layout_width="match_parent"
			android:textColor="#FFFFFFFF"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

		<Button
			android:textSize="20sp"
			android:id="@+id/control_9"
			android:background="@drawable/control_button"
			android:layout_width="match_parent"
			android:textColor="#FFFFFFFF"
			android:layout_height="match_parent"
			android:layout_weight="1.0"/>

	</LinearLayout>

	<Button
		android:textSize="15sp"
		android:id="@+id/control_command"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginTop="0dp"
		android:text="@string/control_command"
		android:textColor="#FFFFFFFF"
		android:layout_alignParentTop="true"
		android:layout_toRightOf="@+id/control_chat"
		android:layout_centerHorizontal="true"/>

	<Button
		android:textSize="15sp"
		android:id="@+id/control_chat"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginTop="0dp"
		android:text="@string/control_chat"
		android:textColor="#FFFFFFFF"
		android:layout_toRightOf="@+id/esc"
		android:layout_alignParentTop="true"/>

	<Button
		android:textSize="15sp"
		android:id="@+id/control_3rd"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginLeft="162dp"
		android:layout_marginTop="0dp"
		android:text="@string/control_thirdperson"
		android:textColor="#FFFFFFFF"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"/>

	<Button
		android:textSize="15sp"
		android:id="@+id/esc"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:layout_marginTop="0dp"
		android:textColor="#FFFFFFFF"
		android:text="@string/esc"
		android:layout_alignParentTop="true"
		android:inputType="text"/>

	<EditText
		android:textSize="20sp"
		android:id="@+id/input_scanner"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:textColor="#FFFFFFFF"
		android:ems="10"
		android:singleLine="true"
		android:layout_marginRight="0dp"
		android:layout_marginTop="0dp"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:inputType="text"
		android:alpha="0.3"
		android:text="&gt;_"
		android:background="@drawable/control_button"/>

	<Button
		android:layout_width="85dp"
		android:layout_height="54dp"
		android:layout_toLeftOf="@id/input_scanner"
		android:text="R"
		android:background="@drawable/control_button"
		android:id="@+id/key_r"
		android:textSize="15sp"
		android:textColor="#FFFFFFFF"/>

	<Button
		android:layout_width="85dp"
		android:layout_height="54dp"
		android:text="P"
		android:background="@drawable/control_button"
		android:layout_toLeftOf="@id/key_r"
		android:id="@+id/key_p"
		android:textSize="15sp"
		android:textColor="#FFFFFFFF"/>

	<Button
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:text="Y"
		android:background="@drawable/control_button"
		android:layout_toLeftOf="@id/key_p"
		android:id="@+id/key_y"
		android:textSize="15sp"
		android:textColor="#FFFFFFFF"/>

	<Button
		android:layout_width="60dp"
		android:layout_height="56dp"
		android:background="@drawable/control_button"
		android:text="Hide"
		android:layout_toRightOf="@id/control_3rd"
		android:id="@+id/btn_yc"
		android:textColor="#FFFFFFFF"
		android:textSize="15sp"
		android:layout_marginTop="53dp"
		android:layout_alignParentLeft="true"/>

	<Button
		android:textSize="15sp"
		android:id="@+id/mouse_primary"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:text="@string/mouse_primary"
		android:textColor="#FFFFFFFF"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="135dp"
		android:layout_alignParentRight="true"
		android:layout_marginRight="100dp"/>

	<Button
		android:textSize="15sp"
		android:id="@+id/mouse_secondary"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:text="@string/mouse_secondary"
		android:textColor="#FFFFFFFF"
		android:layout_alignParentRight="true"
		android:layout_marginRight="45dp"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="135dp"/>

	<Button
		android:textSize="20sp"
		android:id="@+id/control_lshift"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:textColor="#FFFFFFFF"
		android:layout_height="54dp"
		android:text="@string/control_shift"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="67dp"
		android:layout_marginRight="14dp"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="54dp"/>

	<Button
		android:layout_width="72dp"
		android:layout_height="46dp"
		android:text="Q"
		android:layout_alignParentBottom="true"
		android:id="@+id/btn_q"
		android:background="@drawable/control_button"
		android:textSize="15sp"
		android:textColor="#FFFFFFFF"
		android:layout_alignParentRight="true"
		android:layout_marginBottom="20dp"
		android:layout_marginRight="15dp"/>

	<Button
		android:textSize="15sp"
		android:id="@+id/control_inventory"
		android:background="@drawable/control_button"
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:textColor="#FFFFFFFF"
		android:text="@string/control_inventory"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="14dp"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="108dp"/>

	<Button
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:text="B"
		android:layout_below="@id/input_scanner"
		android:layout_alignParentRight="true"
		android:id="@+id/key_b"
		android:textColor="#FFFFFFFF"
		android:background="@drawable/control_button"/>

	<Button
		android:layout_width="54dp"
		android:layout_height="54dp"
		android:text="A"
		android:layout_toLeftOf="@id/key_b"
		android:layout_below="@id/input_scanner"
		android:id="@+id/key_a"
		android:textColor="#FFFFFFFF"
		android:background="@drawable/control_button"/>

	<Button
		android:layout_width="70dp"
		android:layout_height="46dp"
		android:text="@string/control_shift2"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="120dp"
		android:layout_marginBottom="20dp"
		android:id="@+id/control_lshift2"
		android:textColor="#FFFFFFFF"
		android:background="@drawable/control_button"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Boat Co2 1.0.0.3"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="16dp"
		android:textColor="#FFFFFFFF"/>

</RelativeLayout>

